@@ -1,5 +1,8 @@
 2000-11-22  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* Added CEOS_DM_* metadata items for CEOS SAR format at Peter
+	Farris-Manning's request in frmts/ceos2/sar_ceosdataset.cpp.
+
 	* Fixed bug in complex image overview generation (core/overview.cpp).
 	The complex overview images were corrupt.
 
